# rememberizer-mcp-test

./: README.md  pyproject.toml
src/mcp_server_rememberizer/: server.py
